--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,13 +8,21 @@ jobs:
   ci:
     runs-on: windows-latest
     strategy:
-      max-parallel: 1
+      max-parallel: 4
       matrix:
         include:
           - profile: release
             flags: "--release"
+            target: x86_64-pc-windows-msvc
+          - profile: release
+            flags: "--release"
+            target: aarch64-pc-windows-msvc
           - profile: optimized
             flags: "--profile optimized"
+            target: x86_64-pc-windows-msvc
+          - profile: optimized
+            flags: "--profile optimized"
+            target: aarch64-pc-windows-msvc
 
     steps:
       - name: Checkout
@@ -24,6 +32,7 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           components: rustfmt, clippy
+          targets: x86_64-pc-windows-msvc,aarch64-pc-windows-msvc
 
       - name: Cache cargo registry
         uses: actions/cache@v4
@@ -52,11 +61,11 @@ jobs:
         run: cargo clippy --all-targets --all-features -- -W clippy::pedantic
 
       - name: Build
-        run: cargo build ${{ matrix.flags }}
+        run: cargo build ${{ matrix.flags }} --target ${{ matrix.target }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: debloat-${{ matrix.profile }}
-          path: target/${{ matrix.profile }}/debloat.exe
+          name: debloat-${{ matrix.profile }}-${{ matrix.target }}
+          path: target/${{ matrix.target }}/${{ matrix.profile }}/debloat.exe
           retention-days: 30
