--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,9 @@ jobs:
           components: rustfmt, clippy
           targets: x86_64-pc-windows-msvc,aarch64-pc-windows-msvc
 
+      - name: Install sccache
+        uses: mozilla-actions/sccache-action@v0.0.4
+
       - name: Cache cargo registry
         uses: actions/cache@v4
         with:
@@ -45,12 +48,6 @@ jobs:
         with:
           path: ~/.cargo/git
           key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Cache cargo build
-        uses: actions/cache@v4
-        with:
-          path: target
-          key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Format check
         if: matrix.profile == 'release'
