--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,8 +34,14 @@ jobs:
           components: rustfmt, clippy
           targets: x86_64-pc-windows-msvc,aarch64-pc-windows-msvc
 
-      - name: Install sccache
-        uses: mozilla-actions/sccache-action@v0.0.4
+      - name: Cache sccache
+        uses: actions/cache@v4
+        with:
+          path: ${{ github.workspace }}/.sccache
+          key: ${{ runner.os }}-sccache-${{ matrix.target }}-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-sccache-${{ matrix.target }}-
+            ${{ runner.os }}-sccache-
 
       - name: Cache cargo registry
         uses: actions/cache@v4
@@ -54,20 +60,23 @@ jobs:
         run: cargo fmt --all -- --check
         env:
           RUSTC_WRAPPER: sccache
-          SCCACHE_GHA_ENABLED: "on"
+          SCCACHE_DIR: ${{ github.workspace }}/.sccache
+          SCCACHE_CACHE_SIZE: 2G
 
       - name: Clippy
         if: matrix.profile == 'release'
         run: cargo clippy --all-targets --all-features -- -W clippy::pedantic
         env:
           RUSTC_WRAPPER: sccache
-          SCCACHE_GHA_ENABLED: "on"
+          SCCACHE_DIR: ${{ github.workspace }}/.sccache
+          SCCACHE_CACHE_SIZE: 2G
 
       - name: Build
         run: cargo build ${{ matrix.flags }} --target ${{ matrix.target }}
         env:
           RUSTC_WRAPPER: sccache
-          SCCACHE_GHA_ENABLED: "on"
+          SCCACHE_DIR: ${{ github.workspace }}/.sccache
+          SCCACHE_CACHE_SIZE: 2G
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
