--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,85 +2,105 @@ name: CI
 
 on:
   push:
+    paths:
+      - "**/*.rs"
+      - "Cargo.toml"
+      - "Cargo.lock"
+
   pull_request:
+    paths:
+      - "**/*.rs"
+      - "Cargo.toml"
+      - "Cargo.lock"
 
 jobs:
-  ci:
+  lint:
+    name: Format and Clippy
     runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Install Rust toolchain with rustfmt + clippy
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+          components: rustfmt, clippy
+          profile: minimal
+
+      - name: Cache cargo registry, git and sccache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ${{ env.USERPROFILE }}\.cargo\registry
+            ${{ env.USERPROFILE }}\.cargo\git
+            target
+            ${{ env.LOCALAPPDATA }}\sccache
+          key: ${{ runner.os }}-cargo-fmt-clippy-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+
+      - name: Check formatting
+        run: cargo fmt --all -- --check
+
+      - name: Run clippy
+        run: cargo clippy --all-targets --all-features -- -D warnings -W clippy::pedantic
+
+  build:
+    name: Build matrix
+    needs: lint
+    runs-on: windows-latest
+
+    env:
+      SCCACHE_GHA_ENABLED: "true"
+      RUSTC_WRAPPER: "sccache"
+
     strategy:
-      max-parallel: 4
       matrix:
-        include:
-          - profile: release
-            flags: "--release"
-            target: x86_64-pc-windows-msvc
-          - profile: release
-            flags: "--release"
-            target: aarch64-pc-windows-msvc
-          - profile: optimized
-            flags: "--profile optimized"
-            target: x86_64-pc-windows-msvc
-          - profile: optimized
-            flags: "--profile optimized"
-            target: aarch64-pc-windows-msvc
+        target: [x86_64-pc-windows-msvc, aarch64-pc-windows-msvc]
+        profile: [release, optimized]
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+        uses: actions-rs/toolchain@v1
         with:
-          components: rustfmt, clippy
-          targets: x86_64-pc-windows-msvc,aarch64-pc-windows-msvc
+          toolchain: stable
+          override: true
+          profile: minimal
 
-      - name: Cache sccache
+      - name: Setup sccache
+        uses: Mozilla-Actions/sccache-action@v0.0.9
+
+      - name: Cache cargo registry, git, target and sccache
         uses: actions/cache@v4
         with:
-          path: ${{ github.workspace }}/.sccache
-          key: ${{ runner.os }}-sccache-${{ matrix.target }}-${{ hashFiles('**/Cargo.lock') }}
+          path: |
+            ${{ env.USERPROFILE }}\.cargo\registry
+            ${{ env.USERPROFILE }}\.cargo\git
+            target
+            ${{ env.LOCALAPPDATA }}\sccache
+          key: ${{ runner.os }}-cargo-${{ matrix.target }}-${{ matrix.profile }}-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
-            ${{ runner.os }}-sccache-${{ matrix.target }}-
-            ${{ runner.os }}-sccache-
+            ${{ runner.os }}-cargo-${{ matrix.target }}-
 
-      - name: Cache cargo registry
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+      - name: Add target
+        run: rustup target add ${{ matrix.target }}
 
-      - name: Cache cargo index
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/git
-          key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Format check
-        if: matrix.profile == 'release'
-        run: cargo fmt --all -- --check
+      - name: Build (uses sccache)
         env:
+          MATRIX_TARGET: ${{ matrix.target }}
+          MATRIX_PROFILE: ${{ matrix.profile }}
           RUSTC_WRAPPER: sccache
-          SCCACHE_DIR: ${{ github.workspace }}/.sccache
-          SCCACHE_CACHE_SIZE: 2G
+        shell: powershell
+        run: |
+          if ($env:MATRIX_PROFILE -eq 'release') {
+            cargo build --target $env:MATRIX_TARGET --release --locked
+          } else {
+            cargo build --target $env:MATRIX_TARGET --profile optimized --locked
+          }
 
-      - name: Clippy
-        if: matrix.profile == 'release'
-        run: cargo clippy --all-targets --all-features -- -W clippy::pedantic
-        env:
-          RUSTC_WRAPPER: sccache
-          SCCACHE_DIR: ${{ github.workspace }}/.sccache
-          SCCACHE_CACHE_SIZE: 2G
-
-      - name: Build
-        run: cargo build ${{ matrix.flags }} --target ${{ matrix.target }}
-        env:
-          RUSTC_WRAPPER: sccache
-          SCCACHE_DIR: ${{ github.workspace }}/.sccache
-          SCCACHE_CACHE_SIZE: 2G
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: debloat-${{ matrix.profile }}-${{ matrix.target }}
-          path: target/${{ matrix.target }}/${{ matrix.profile }}/debloat.exe
-          retention-days: 30
+      - name: sccache --show-stats
+        run: sccache --show-stats || true
