--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
   lint:
     name: Lint
     runs-on: windows-latest
-    steps:
+    stepst:
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -48,30 +48,16 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
-      - name: Cache Cargo registry and git
+      - name: Cache target/
         uses: actions/cache@v3
         with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-          key: cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+          path: target
+          key: target-${{ matrix.target }}-${{ matrix.profile }}-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
-            cargo-registry-
-
-      - name: Setup sccache
-        uses: mozilla-actions/sccache-action@v0.0.9
-
-      - name: Cache sccache
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/sccache
-          key: sccache-${{ matrix.target }}-${{ matrix.profile }}
+            target-${{ matrix.target }}-${{ matrix.profile }}-
 
       - name: Build
-        env:
-          SCCACHE_GHA_ENABLED: "true"
-          RUSTC_WRAPPER: "sccache"
-        run: cargo build --target ${{ matrix.target }} --profile ${{ matrix.profile }}
+        run: cargo build --target ${{ matrix.target }} --profile ${{ matrix.profile }} --all-features
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
