--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
   lint:
     name: Lint
     runs-on: windows-latest
-    stepst:
+    steps:
       - name: Checkout
         uses: actions/checkout@v4
 
