--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,15 @@ name: Build
 
 on:
   push:
+    paths:
+      - "**/*.rs"
+      - "Cargo.toml"
+      - "Cargo.lock"
   pull_request:
+    paths:
+      - "**/*.rs"
+      - "Cargo.toml"
+      - "Cargo.lock"
 
 jobs:
   lint:
@@ -13,48 +21,40 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+        uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           components: rustfmt, clippy
 
+      - name: Run sccache-cache
+        uses: mozilla-actions/sccache-action@v0.0.9
+
       - name: Run cargo fmt
-        run: cargo fmt --all -- --check
+        run: cargo fmt --all --all-targets --all-features -- --check
 
       - name: Run cargo clippy
-        run: cargo clippy --all-targets -- -W clippy::pedantic
+        run: cargo clippy --all --all-targets --all-features -- -W clippy::pedantic
 
   build:
-    name: Build (${{ matrix.target }}, ${{ matrix.profile }})
+    name: Build (${{ matrix.target == 'x86_64-pc-windows-msvc' && 'x64' || 'arm64' }}, ${{ matrix.profile }})
     runs-on: windows-latest
     needs: lint
     strategy:
       matrix:
-        include:
-          - target: x86_64-pc-windows-msvc
-            profile: release
-          - target: x86_64-pc-windows-msvc
-            profile: optimized
-          - target: aarch64-pc-windows-msvc
-            profile: release
-          - target: aarch64-pc-windows-msvc
-            profile: optimized
+        target: [x86_64-pc-windows-msvc, aarch64-pc-windows-msvc]
+        profile: [release, optimized]
+      max-parallel: 1
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+        uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          targets: ${{ matrix.target }}
+          target: ${{ matrix.target }}
 
-      - name: Cache target/
-        uses: actions/cache@v3
-        with:
-          path: target
-          key: target-${{ matrix.target }}-${{ matrix.profile }}-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            target-${{ matrix.target }}-${{ matrix.profile }}-
+      - name: Run sccache-cache
+        uses: mozilla-actions/sccache-action@v0.0.9
 
       - name: Build
         run: cargo build --target ${{ matrix.target }} --profile ${{ matrix.profile }} --all-features
@@ -62,5 +62,5 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: debloat-${{ matrix.target }}-${{ matrix.profile }}
+          name: debloat-${{ matrix.target == 'x86_64-pc-windows-msvc' && 'x64' || 'arm64' }}-${{ matrix.profile }}
           path: target/${{ matrix.target }}/${{ matrix.profile }}/debloat.exe
