--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,11 +3,13 @@ name: Build
 on:
   push:
     paths:
+      - "**/*.yml"
       - "**/*.rs"
       - "Cargo.toml"
       - "Cargo.lock"
   pull_request:
     paths:
+      - "**/*.yml"
       - "**/*.rs"
       - "Cargo.toml"
       - "Cargo.lock"
