--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
         uses: mozilla-actions/sccache-action@v0.0.9
 
       - name: Run cargo fmt
-        run: cargo fmt --all --all-features -- --check
+        run: cargo fmt --all -- --check
 
       - name: Run cargo clippy
         run: cargo clippy --all --all-targets --all-features -- -W clippy::pedantic
